replace deprecated JavaAPI (LocalDateTime, URL) #85